objects/Customer__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Amount paid by customer</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Contact Email</description>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>Fax Number</description>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Eastern Region,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Region,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Region,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern Region,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Eastern Region,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Region</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <label>Mailing Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <description>Mobile number of the customer</description>
        <label>Mobile</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone Number</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Valid_Id_Proof__c</fullName>
        <label>Valid Id Proof</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Customer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Age__c</columns>
        <columns>Mobile__c</columns>
        <columns>Phone__c</columns>
        <columns>Valid_Id_Proof__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Simpsons_IdCheck</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( Valid_Id_Proof__c &lt;&gt; &quot;PAN Card&quot;, Valid_Id_Proof__c &lt;&gt; &quot;Driving License&quot;, Valid_Id_Proof__c &lt;&gt; &quot;Voter Card&quot;)</errorConditionFormula>
        <errorMessage>This is not a valid ID proof</errorMessage>
    </validationRules>
</CustomObject>